# projects_learnopengl

./: CMakeLists.txt
include/: shader.h
include/glad/: glad.h
src/: exercise6_8.cpp  glad.c  main.cpp  shader.cpp  tricolored_triangle.cpp  uniforms_.cpp
